--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="refresh">refresh</string>
     <string name="delete_media">Delete media</string>
     <string name="syncing_contacts">Syncing contacts</string>
+    <string name="title_activity_create_group">CreateGroup</string>
 </resources>
