--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="delete_media">Delete media</string>
     <string name="syncing_contacts">Syncing contacts</string>
     <string name="title_activity_create_group">CreateGroup</string>
+    <string name="add_group_name">Add group name</string>
 </resources>
