--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="syncing_contacts">Syncing contacts</string>
     <string name="title_activity_create_group">CreateGroup</string>
     <string name="add_group_name">Add group name</string>
+    <string name="share">Share</string>
 </resources>
