--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Mimi</string>
     <string name="created_by">From L.O.S</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
@@ -17,8 +17,6 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="join">Join</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="password">Password</string>
